# rust-ws-chat

./: Cargo.toml  README.md  client.py
src/: foo.rs  main.rs  server.rs
static/: websocket.html
