[package]
name = "ws-chat-rs"
version = "0.1.0"
authors = ["Joona Piirainen <joona.piirainen@gmail.com>"]
edition = "2018"

[[bin]]
name = "ws-chat-rs"
path = "src/main.rs"


[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"

rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
serde = "1"
serde_json = "1"
